fix overflow

--- a/midtermstyle.css
+++ b/midtermstyle.css
@@ -91,6 +91,7 @@ ol {
   max-width: 400px;
   width: 100%;
   text-align: left;
+  padding-left: 10px;
 }
 
 hr {
